GMetrics Change Log
-------------------------------------------------------------------------------
http://www.gmetrics.org

Changes in version 0.6 (??? 2012)
--------------------------------------
NEW METRICS
- New EfferentCouplingMetric. Package-level metric that counts the number of other packages that the classes in a package depend upon, and is an indicator of the package's independence.

FIXES AND ENHANCEMENTS
- #3508192: Make CoberturaCoverageFile threadsafe.
- #3520789: Fix CyclomaticComplexity metric does not count null-check operator if it is applied to a method call.
- #3523819: Omit attributes that have null value from the XML report.
- #3523820: Reports: Support for metric values that are lists or maps.
- #3523828: BasicHtmlReportWriter: Display ‘N/A’ if the metric value is null.


Changes in version 0.5 (Jan 2012)
--------------------------------------
NEW METRICS
- New CoberturaBranchCoverageMetric. Branch coverage at method/class/package level. Requires a Cobertura "coverage.xml" file. (#3474462)
- New CoberturaLineCoverageMetric. Line coverage at method/class/package level. Requires a Cobertura "coverage.xml" file. (#3474462)
- New CrapMetric. Calculated the CRAP score for a method, based on its complexity and code coverage. Requires a Cobertura "coverage.xml" file. (#3192158.)

NEW FEATURES
- MetricSet DSL: Return value from each metric in the metric set; Allow storing metric in variable. #3465486.
  This is useful for composite Metrics that require other metric values to calculate results (e.g. CrapMetric). If a metric is
  defined within another metric definition (assigned to a field), do not include as a standalone metric in the metric set.

INTEGRATION WITH OTHER TOOLS
- If you use GMetric with CodeNarc, this release requires CodeNarc 0.16.

FIXES AND ENHANCEMENTS
- Method-level Metrics: Handle multiple overloaded methods. (#3439103). Use MethodKey class.