@@ -33,7 +33,6 @@ import org.gmetrics.metric.PostProcessingMetric
  * This class is not reentrant.
  *
  * @author Chris Mair
- * @version $Revision$ - $Date$
  */
 class AntFileSetSourceAnalyzer implements SourceAnalyzer {
 
@@ -125,7 +124,7 @@ class AntFileSetSourceAnalyzer implements SourceAnalyzer {
 
     // TODO Harvest?
     private ClassResultsNode applyMetricsToClass(ClassNode classNode, MetricSet metricSet, SourceCode sourceCode) {
-        def classResultsNode = new ClassResultsNode(classNode.name)
+        def classResultsNode = new ClassResultsNode(classNode.name, sourceCode.getName(), sourceCode.getPath())
         metricSet.metrics.each { metric ->
             def classMetricResult = metric.applyToClass(classNode, sourceCode)
             classResultsNode.addClassMetricResult(classMetricResult)
